feat: add test account login flow without embedding jwt
